--- a/views/lab.html
+++ b/views/lab.html
@@ -35,7 +35,7 @@
             class=""
           ></div>
         </div> -->
-        {{{HtmlContent}}} {{/post}}
+        {{{Content}}} {{/post}}
       </div>
     </div>
   </div>
